# ParaFEM-lite

./: CMakeLists.txt  README.md  compile.sh
src/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/choose_solvers/: CMakeLists.txt
src/modules/mpi/: CMakeLists.txt  gather_scatter.f90  input.f90  mp_interface.f90
src/modules/parafem_petsc/: CMakeLists.txt  parafem_petsc.F90
src/programs/: CMakeLists.txt
src/programs/dev/: CMakeLists.txt
src/programs/dev/xx14/: job.cray.pbs  job.intel.pbs  makefile  readme.txt  xx14.f90  xx14noio.f90  xx14rot.f90  xx14rot_noio.f90  xx14rot_std.f90  xx14std.f90
src/programs/dev/xx15/: CMakeLists.txt
src/programs/microFE/: .core.F90.swp  .microFE.F90.swp  CMakeLists.txt  core.F90  linalg.F90  microFE.F90  plasticity.F90  setup.F90  shared_data.F90
